# bjcups-2.50

./: Makefile  bjfilter-common.spec
bjcups/: INSTALL  Makefile.am  README  configure.in
bjcups/bjcups/: Makefile.am  bjcups.c  bjcups.h  bjutil.c  bjutil.h  getipc.c
bjcups/include/cncl/: cncl.h
bjcups/include/misc/: bjipc.h
bjcupsmon/: .gitignore  ChangeLog  INSTALL  Makefile.am  README  autogen-old.sh  bjcupsmon.glade  configure.ac
bjcupsmon/backend/: .gitignore  Makefile.am  README  backend-private.h  canon-usb.c  canon_backend_common.c  canon_backend_common.h  canon_common_function.h  canon_parallel.c  canon_usb.c  common.h  cups-private.h  ieee1284.c  snprintf.c  string-private.h  usb-unix.c
bjcupsmon/configures/: configure.in.new  configure.in.old
bjcupsmon/po/: LINGUAS
bjcupsmon/src/: .gitignore  Makefile.am  bjcupsmon_callbacks.c  bjcupsmon_common.h  bjcupsmon_cups.c  bjcupsmon_cups.h  bjcupsmon_draw.c  bjcupsmon_draw.h  bjcupsmon_err.h  bjcupsmon_funcprot.h  bjcupsmon_main.c  bjcupsmon_msgidset.c  bjcupsmon_transsts.c  bjcupsmon_transsts.h  bjcupsmon_ui.c  bjcupsmon_ui.h  callbacks.h  interface.c  support.c
bjfilter/: README  configure.in
bjfilter/src/: Makefile.am  bjferror.c  bjfilter.c  bjfoption.c  bjfpath.h  bjfrcaccess.c
libs/: configure.in
libs/bjexec/: Makefile  bjexec.c  bjexec.h
libs/buftool/: buflist.c  buflist.h  buftool.c  buftool.h
libs/paramlist/: Makefile  paramlist.c  paramlist.h
ppd/: Makefile.am  configure.in
printui/: AUTHORS  INSTALL  Makefile.am  NEWS  README  autogen-old.sh  configure.ac  configure.in  keytext.pl  keytext.sh  printui.glade
printui/cmd/: Makefile.am  bjcmd.c
printui/configures/: configure-new.in  configure-old.in
printui/filters/: _ps
printui/keytext/: locale-table
printui/src/: Makefile.am  comdb.c  dialog.c  gdktool.c  gdktool.h  globals.h  interface.c  keytext.c  loadres.c  main.c  mediasizedlg.c  modeltbl.c  qualitydlg.c  utildef.h  utility.c  widgets.c
pstocanonbj/: ChangeLog  INSTALL  README  configure.in
pstocanonbj/filter/: Makefile.am  canonopt.c  canonopt.h  paramlist.c  paramlist.h  pstocanonbj.c
stsmon/: .gitignore  INSTALL  Makefile.am  NEWS  README  configure.ac  stsmon.glade
stsmon/configures/: configure.in.new  configure.in.old
stsmon/lgmon/: Makefile.am  lm_print.c
stsmon/po/: POTFILES.in  cs.po  da.po  de.po  el.po  es.po  fi.po  fr.po  hu.po  it.po  ja.po  ko.po  nl.po  no.po  pl.po  pt.po  ru.po  sv.po  th.po  zh.po  zh_TW.po
stsmon/src/: Makefile.am  callbacks.c  callbacks.h  interface.c  interface.h  main.c  smstat.c  smstat.h  support.c
