dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(bjcupsmon, 0.1)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11 foreign])

AM_SILENT_RULES([yes])

AC_PROG_CC



LT_INIT



[]
PKG_CHECK_MODULES(LIBXML,libxml)

PKG_CHECK_MODULES(GTK_,gtk+)

AC_OUTPUT([
Makefile
backend/Makefile
src/Makefile
])
